# chocolatine

./: .env-sample  LICENSE  README  constants.py  main.py  pyproject.toml
src/chocmodeller/: modeller.py
src/libchocolatine/: arima.pyx  arimabuilder.py  arimapredictor.py  asyncfetcher.py  libchocolatine.py
